--- a/app/src/main/res/layout/dialog_search_invitation.xml
+++ b/app/src/main/res/layout/dialog_search_invitation.xml
@@ -15,6 +15,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
         android:text="@string/graduaci_n_itsu"
+        android:textColor="#848688"
         android:textSize="24sp" />
 
     <com.google.android.material.textfield.TextInputLayout
