[MOD] adding AboutActivity and updating presentation of the app

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,7 +52,7 @@
         app:layout_constraintGuide_percent="0.9" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textView_by"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Ingeniería en Sistemas 2020"
